# birthday_wishes

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  dummy_server.py  main.py  pyproject.toml
src/: bot.py  cog.py  command.py  command_group.py  model.py  table_manager.py
src/database/: table.py
